Bug 1347147 - fix DrawTargetD2D1::GetImageForSurface to support uploads in device-space. r=mchang a=gchang

MozReview-Commit-ID: 2galhKidxca